--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_typography.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_typography.scss
@@ -327,49 +327,52 @@ h5, h6, .h5, .h6 {
 	&[data-name='Artemis'] {
 		color: #9aa7b3;
 	}
-	&[data-name='Harroc'] {
-		color: #40bf00;
-	}
-	&[data-name='Leiven'] {
-		color: #4080ff;
-	}
-	&[data-name='Vanessa LaNore'] {
-		color: #8040ff;
-	}
-	&[data-name='Sir Archibald'] {
-		color: #8080ff;
-	}
-	&[data-name='Marcy Faen'] {
-		color: #bf40bf;
-	}
-	&[data-name='Tommy'] {
-		color: #ffff80;
-	}
-	&[data-name='The Cook'] {
-		color: #ff4040;
-	}
 	&[data-name='Charlotte'] {
 		color: #a65300;
-	}
-	&[data-name='Deborah'] {
-		color: #ec489a;
-	}
-	&[data-name='Robert Jenn'] {
-		color: #ffdead;
-	}
-	&[data-name='Terrance Khadar'] {
-		color: #ff00ff;
 	}
 	&[data-name='Dash ODell'] {
 		color: #008040;
 	}
-	&[data-name='Miss Turley'] {
-		color: #bfffff;
+	&[data-name='Deborah'] {
+		color: #ec489a;
+	}
+	&[data-name='Galynhun-Khan Tinnudir'] {
+		color: #778899;
+	}
+	&[data-name='Harroc'] {
+		color: #40bf00;
+	}
+	&[data-name='Inessa Marcant'] {
+		color: #daf7f3;
 	}
 	&[data-name='Ksenia'] {
 		color: #c699f3;
 	}
-	&[data-name='Inessa Marcant'] {
-		color: #daf7f3;
+	&[data-name='Leiven'] {
+		color: #4080ff;
+	}
+	&[data-name='Marcy Faen'] {
+		color: #bf40bf;
+	}
+	&[data-name='Miss Turley'] {
+		color: #bfffff;
+	}
+	&[data-name='Robert Jenn'] {
+		color: #ffdead;
+	}
+	&[data-name='Sir Archibald'] {
+		color: #8080ff;
+	}
+	&[data-name='Terrance Khadar'] {
+		color: #ff00ff;
+	}
+	&[data-name='The Cook'] {
+		color: #ff4040;
+	}
+	&[data-name='Tommy'] {
+		color: #ffff80;
+	}
+	&[data-name='Vanessa LaNore'] {
+		color: #8040ff;
 	}
 }
