--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_typography.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_typography.scss
@@ -327,14 +327,23 @@ h5, h6, .h5, .h6 {
 	&[data-name='Artemis'] {
 		color: #9aa7b3;
 	}
+	&[data-name='Aurae'] {
+		color: #ff8080;
+	}	
 	&[data-name='Charlotte'] {
 		color: #a65300;
+	}
+	&[data-name='Dáire'] {
+		color: #00bf80;
 	}
 	&[data-name='Dash ODell'] {
 		color: #008040;
 	}
 	&[data-name='Deborah'] {
 		color: #ec489a;
+	}
+	&[data-name='Elára Vëa'] {
+		color: #bf4000;
 	}
 	&[data-name='Galynhun-Khan Tinnudir'] {
 		color: #778899;
@@ -345,17 +354,29 @@ h5, h6, .h5, .h6 {
 	&[data-name='Inessa Marcant'] {
 		color: #daf7f3;
 	}
+	&[data-name='Inya'] {
+		color: #bfbfbf;
+	}
+	&[data-name='Katarya Frost'] {
+		color: #4080ff;
+	}
 	&[data-name='Ksenia'] {
 		color: #c699f3;
 	}
 	&[data-name='Leiven'] {
 		color: #4080ff;
 	}
+	&[data-name='Loxiel'] {
+		color: #40ff80;
+	}
 	&[data-name='Marcy Faen'] {
 		color: #bf40bf;
 	}
-	&[data-name='Miss Turley'] {
-		color: #bfffff;
+	&[data-name='Raen Silver'] {
+		color: #80bfbf;
+	}
+	&[data-name='Robert Jenn'] {
+		color: #ffdead;
 	}
 	&[data-name='Robert Jenn'] {
 		color: #ffdead;
