--- a/khyeras/styles/khyeras_v1/template/partials/header_content.html
+++ b/khyeras/styles/khyeras_v1/template/partials/header_content.html
@@ -1,79 +1,91 @@
 {% set quotes = [
 	{
-		text : 'When the planet was cursed to fade and wither, five entities made their way through the fissures in Khy\'eras to see if anything could be salvaged. These beings were Eidolons, ethereal spirits that believed they could bring the realm back from the grasp of death and create an existence from the ruins.',
-		author : 'Khy\'eras history'
+		text : 'Someone had once called Toa impulsive and while she had responded to this by slapping them in the face in retrospect they may have had a point.',
+		author : '<a href="./viewtopic.php?f=15&p=296#p296">Toa</a>'
 	},
 	{
-		text : 'Not so long ago, people could pray to the Eidolons, but faith in those deities was discarded. Temples were destroyed, books were burned, and voices went silent. The races were afraid that Bhelest and the hydra would hear them.',
-		author : 'Khy\'eras history'
+		text : 'When the smoke vanished from the falling entity, a cat had taken the place of the hawk. Silvery coat, with black spots and large, tufted ears; Loxiel\'s cat form was the only chance he had at surviving this fall. A cat always landed on its feet... right?',
+		author : '<a href="./viewtopic.php?f=15&t=143#p526">Loxiel</a>'
 	},
 	{
-		text : 'The owner of the lighthouses had a daughter by the name of Cecilia who was about twenty-two years. The girl had no real skills as far as combat and did not have the tactical aptitude to lead an army, but she was an inventor and had ingenious ideas.',
-		author : 'Khy\'eras history'
+		text : '"I... uh. I guess you saw that." Cass began nervously, offering the other a sheepish smile. "You\'re shorter than I thought."',
+		author : '<a href="./viewtopic.php?f=13&t=138&p=542#p522">Cassian Thander</a>'
 	},
 	{
-		text : 'Explorers journeyed out of cities to uncover what else Khy\'eras had to offer besides war. People said that those who left found only death, but others found something else entirely - hope and adventures.',
-		author : 'Khy\'eras history'
+		text : 'With a shake of his now massive head, Harrroc planted his paws firmly and let loose a bone-rattling howl. The mournful wail seemed to pierce through the jungle and leave silence behind. After several moments of silence, far off replies could be heard. They wove together and became uncountable before finally fading away.',
+		author : '<a href="./viewtopic.php?f=14&t=124&p=548#p430">Harroc Crownegrove</a>'
 	},
 	{
-		text : 'Many people have blamed history\'s wrong-doings on Dragons. Though these creatures have chosen to remain hidden, they have learned to speak and have brought in Ue\'drahc and Human scholars to instruct them on subjects such as reading, recent news, and whatever concepts they are interested in.',
-		author : 'About Dragons'
+		text : '"Well, can\'t pretend I ever knew Lilian all that well, but I dare to say you\'re far more of a looker than she ever was; if you\'re still needing comfort in the dead of night, I\'ve received splendid reviews about my bedside." Was it inappropriate? Maybe. Would Katarya disapprove of Val leaning over the counter with far more spirit than before and eyeing her black outfit up and down? Almost certainly, but try explaining good manners and empathy to a bard.',
+		author : '<a href="./viewtopic.php?f=12&t=122#p468">Val Bellamy</a>'
 	},
 	{
-		text : 'Through the science of "Hybridization", a blood union of Dragon-Human called the "Ue\'drahc" was designed and birthed. Able to adventure, the Ue\'drahc still choses to cloak its unique appearance as they often frighten Khy\'eras folk.',
-		author : 'About Ue\'drahcs'
+		text : '"If you\'re so berry talented, then lettuce hear you sweeten your tune to plumb the depths of our hearts as well as our coin purses, hmm? Give it another try, darling, and this time try to make it a-peel-ing instead of appalling." There was a lilt to his accent, an obvious blending of vowels and lingering on certain consonants that marked him just as much from Ninraih as his stature and his wings, as his color and flair marked him as a glorious jungle flower far from home.',
+		author : '<a href="./viewtopic.php?f=12&t=125#p441">Roan Mohan</a>'
 	},
 	{
-		text : 'While several Shapeshifters used their talent for misfortune, the remainder exercised their abilities for the exact opposite and illustrated to the rest of the world that their kind could be trustworthy.',
-		author : 'About Shapeshifters'
+		text : '"Did you know," Mara began, abruptly breaking the silence, "there is a love story about Ristgir and Ny\'tha? It was said that Ixaziel did tell them to rule the heavens equally, instructing them to march across the sky in an endless parade of day into night, night into day. They follow after one another, always just out of reach."',
+		author : '<a href="./viewtopic.php?f=14&t=124#p711">Mara Whitewood</a>'
 	},
 	{
-		text : 'Once part of a larger population of Elves, the Kerasoka broke away and formed their own tribe when an agreement regarding magic and the wars on Bhelest could not be reached. As the Kerasoka continued to disobey and retaliate against Bhelest, the tyrannical scholar stripped them of their magic, an ability which never returned.',
-		author : 'About Kerasoka'
+		text : '"Did he draw you in with some tale about his \'dear old nan\' or was he just pathetic?" She opened her eyes wide, innocently. "Artemis can be rather manipulative, so I do hope you\'re staying on your toes."',
+		author : '<a href="./viewtopic.php?f=12&t=162&start=10#p771">Ksenia</a>'
 	},
 	{
-		text : 'As the Lumeacia departed from Tviyr, presumably to the Northwest, they shied from the rest of the world and continued to study all subjects and practice magic.',
-		author : 'About Lumeacia'
+		text : '"Mm," she hummed, her distracted tone verging on dismissive. Peering sidelong at her Lanae continued, adding more softly, "Hide while you can, but like calls to like; your fangs are not invisible either - to those who know how to look."',
+		author : '<a href="./viewtopic.php?f=11&p=860#p860">Lanae Ofnowhere</a>'
 	},
 	{
-		text : 'Humans have successfully convinced much of the folk on Khy\'eras that they are not to be wiped from the world without difficulty. Quietly stirring inside each is motivation that drives them to survive, explore, and conform to the changing world.',
-		author : 'About Humans'
+		text : 'Swearing colourfully in his mother tongue, D&aacute;ire tried to wriggle out from under the flailing limbs of the wizard, was the man drunk? After managing to scramble to his feet, he could detect no lingering scents of stale liquor on the man, who was still on the ground. No longer flailing, just sitting quietly, squinting up at D&aacute;ire as he watched him.',
+		author : '<a href="./viewtopic.php?f=12&t=169#p874">D&aacute;ire</a>'
 	},
 	{
-		text : 'Elementals are beings made from magic and Aura, a combination they claim to be the same as the Eidolons. As such, many Elementals can be very arrogant and believe their lineage allows them to inherit rule over Khy\'eras.',
-		author : 'About Elementals'
+		text : 'I hate coming up with smart ass comments and not being able to use them, so instead, I made my way over to the fallen woman and said, "I believe the store is closed. You may want to try back during normal business hours." And I reached out a hand to offer her a hand up.<br /><br />I really hoped this lady wasn\'t actually trying to rob the place, otherwise this could get awkward real fast.',
+		author : '<a href="./viewtopic.php?f=12&t=48#p110">Victor Sage</a>'
 	},
 	{
-		text : 'In a time come and gone, the Fae originated from one of Ixaziel\'s visions of fascinating, dream-like birds. But, the Eidolon of all things nature brought them to the earth where they transformed into shorter-sized Humans with gossamer wings.',
-		author : 'About Fae'
+		text : '"What do you want? Congratulations on your vocal performance last night? Gotta say, the soprano screams at about three in the morning knocked me right off my bedroll. And the fortissimo groaning set it off so nicely, I hardly have room to mention that really lovely aria that seemed to consist of Artemis\'s name - and every idol and eidolon, ever."',
+		author : '<a href="./viewtopic.php?f=12&t=168&start=20#p910">Ksenia</a>'
 	},
 	{
-		text : 'The cessation of Domrhask\'s Irenohl brought forth the Dwarves who detached from the inside of the rock golems. With a firmer grasp on situational reality and a range of identifiable emotions, the Dwarves formulated an agenda to reform their beloved city and make it an impenetrable force.',
-		author : 'About Dwarves'
+		text : 'Maggie seemed kind and proud. A formidable old woman with a steely resolve and a warm heart. She might practice the Arts rather then wield a sword, but in his eyes she held every caliber of a knight.',
+		author : '<a href="./viewtopic.php?f=12&t=157&start=20#p990">Arthur Claymore</a>'
 	},
 	{
-		text : 'The existence of the Ghost race is due to the unfortunate result of a murder plot set in motion by a vengeful and greedy man who poisoned patrons in a Verdant Row tavern. His crime did not go unnoticed as a handful of the men awoken as specters to hunt him down.',
-		author : 'About Ghosts'
+		text : 'Reputation was the only real currency that mattered when you dealt in the lawless and dangerous. Gold can be taken, forged, or simply never appear. Reputation took time to build, and could be destroyed in a moment. A man without it had less than the alleyways; they could be relied upon to stink.',
+		author : '<a href="./viewtopic.php?f=12&t=177&p=1190#p1190">Artemis Black</a>'
 	},
 	{
-		text : 'The Korcai race was the result an experiment by Bhelest where he conned a woman named Victoria Erair into drinking vial of virus-laced blood. This transformed Victoria into the undead, but with heightened reflexes and fortitude.',
-		author : 'About Korcai'
+		text : '"Hey, no pushing now." He chided two kids as they tried to get closer. He stepped aside regardless; children should have fun; as much fun as is possible, especially since they were Human and would be dead soon anyway. Raen shrugged.',
+		author : '<a href="./viewtopic.php?f=12&t=188#p1278">Raen Silver</a>'
 	},
 	{
-		text : 'Fellsgard is the foundation of Khy\'eras\' history - a mark in time where Cecilia the Hero began a battle that would finally defeat Bhelest. Through years of reconstruction, it has become a vibrant and lively city.',
-		author : 'About Fellsgard'
+		text : 'It was seldom the wolf was wrong in her assessments of threats, her extrasensory perceptions bordering on otherworldly. Khan had to wonder if she possessed the magic he had been robbed of, hundreds of years ago. It was a terrible thing to remember what was lost, particularly when it was intertwined with one\'s literal being.',
+		author : '<a href="./viewtopic.php?f=17&t=194#p1426">Galynhun-Khan Tinnudir</a>'
 	},
 	{
-		text : 'Depending on the day, Verdant Row can be either chaotic or peaceful to the fatigued adventurer. This town serves as a temporary stop between many of Khy\'eras\' cities where a person can easily refuel by catching a few winks of sleep and grabbing a bite to eat.',
-		author : 'About Verdant Row'
+		text : 'The wolf had started bouncing around excitedly by this point and he decided it was either a very lost companion to some sort of ranger, or had some terrible brain parasite. He\'d heard of those once, they lived in the water. It\'s why you always boiled it.',
+		author : '<a href="./viewtopic.php?f=15&t=205#p1626">Malcolm Rhodes</a>'
 	},
 	{
-		text : 'In the heart of Ninraih\'s jungles, the Fae created the city of Ajteire. To further protect themselves from the undead, they used the magic of fireflies and later, forged a partnership with the Kerasoka Elves.',
-		author : 'About Ajteire'
+		text : 'When the crafter started showing all the signs of a creator possessed, Artemis knew he\'d chosen correctly. Most people who made things from thin air tended to have similar monologues when approached with an opportunity. It meant they weren\'t paying any attention at all to silly details like their own safety or getting paid a fair amount.',
+		author : '<a href="./viewtopic.php?f=12&t=132#p565">Artemis Black</a>'
 	},
 	{
-		text : 'Domrhask, Khy\'eras\' northernmost city situated in the snow-filled Irtuen Reaches, was established by the ancient Irenohl, a race of stone golems. As they built the city, Bhelest took notice of the previously hidden Domrhask and its ample amount of resources that could be used during the war effort. ',
-		author : 'About Domrhask'
+		text : 'The flying squirrel didn\'t respond. As usual. But it did happily take a few berries from her as she snacked on her way. Tika thought it was funny to feed berries to Tok, as the berries stained the creatures mouth and made her look carnivorous. Honestly, a carnivorous flying squirrel was a scary concept!',
+		author : '<a href="./viewtopic.php?t=199#p1645">Tika</a>'
+	},
+	{
+		text : 'She picked up one that looked promising - "Pyromancy for Halfwits" was the title, blazoned across a bright yellow cover. She tucked it under her arm and kept looking.',
+		author : '<a href="./viewtopic.php?f=15&t=240#p1965">Roridula Lunatus</a>'
+	},
+	{
+		text : 'If nothing else, at least admiring the buildings were interesting. He couldn\'t help but wonder if Cecilia had lived in one of these many houses, or maybe some other one of the many Idols, considering the absolute prestige in this area. Or did exciting things happen to ordinary folk? "Maybe even... someone like me?"',
+		author : '<a href="./viewtopic.php?f=12&t=275#p2217">Calem Sabathe</a>'
+	},
+	{
+		text : '"My teacher calls me Dez, and I\'m looking for a performer." The dragon gave his best smile following his words.<br /><br />"Oh really aren\'t we all? Isn\'t that right soldiers?" The three other warriors nodded in unison. The youngest gave an extra wink. "Right, but you look like a thief to me. So watch yourself kid. We take pride in our job. Stay out of trouble and move along."',
+		author : '<a href="./viewtopic.php?f=12&t=250#p2055">Dessrexin</a>'
 	}
 ] %}
 
@@ -87,9 +99,12 @@
 
 {% if quotes && (quotes | length) > 0 %}
 	{% set quote_num = random((quotes | length) - 1) %}
+	{% set textlimit = 330 %}
 	<div class="header-divider"></div>
 	<div id="site-quotes" class="site-quotes">
-		<p>{{ quotes[quote_num].text }}</p>
+		<p>
+			{{ ((quotes[quote_num].text | length) > textlimit) ? (quotes[quote_num].text[:textlimit] ~ '...') : quotes[quote_num].text }}
+		</p>
 		{% if quotes[quote_num].author %}
 			<p class="quote-author"><em>- {{ quotes[quote_num].author }}</em></p>
 		{% endif %}
