--- a/khyeras/_dev/styles/khyeras_v1/template/partials/content_achievements.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/content_achievements.html
@@ -800,23 +800,7 @@
 			{% for detail in card %}
 				{% set card_id = section_id  ~ '-' ~ function.create_handle(detail.title) %}
 				{% set card_changed = (completed_cards && card_id in completed_cards) ? true : false %}
-
-				{% set card_type = 'Book' %}
-				{% if 'rpg-two-shadows' in detail.icon %}
-					{% set card_type = 'People' %}
-				{% elseif 'rpg-castle' in detail.icon %}
-					{% set card_type = 'Castle' %}
-				{% elseif 'rpg-portal' in detail.icon %}
-					{% set card_type = 'Portal' %}
-				{% elseif 'rpg-crossed-swords' in detail.icon %}
-					{% set card_type = 'Swords' %}
-				{% elseif 'rpg-direction-sign' in detail.icon %}
-					{% set card_type = 'Direction' %}
-				{% elseif 'rpg-holy-grail' in detail.icon %}
-					{% set card_type = 'Grail' %}
-				{% endif %}
-
-				<div id="{{ card_id }}" class="card-block{% if card_changed %} card-changed card-opacity{% endif %}" data-filters="location={{ function.create_handle(key) }}, type={{ function.create_handle(card_type) }}, status={{ card_changed ? 'true' : 'false' }}">
+				<div id="{{ card_id }}" class="card-block{% if card_changed %} card-changed card-opacity{% endif %}">
 					<h5 class="card-title">{{ detail.title }}</h5>
 					<div class="icon-wrapper">
 						<i class="icon icon-round rpg-icon {{ detail.icon }}" aria-hidden="true"></i>
@@ -847,3 +831,28 @@
 		</div>
 	</section>
 {% endfor %}
+
+<script>
+	var cardBlocks = [{% for key, card in cards %}{% spaceless %}
+		{% set section_id = function.create_handle(key) %}
+		{% for detail in card %}{% spaceless %}
+			{% set card_id = section_id  ~ '-' ~ function.create_handle(detail.title) %}
+			{% set card_changed = (completed_cards && card_id in completed_cards) ? true : false %}
+			{% set card_type = 'Book' %}
+			{% if 'rpg-two-shadows' in detail.icon %}
+				{% set card_type = 'People' %}
+			{% elseif 'rpg-castle' in detail.icon %}
+				{% set card_type = 'Castle' %}
+			{% elseif 'rpg-portal' in detail.icon %}
+				{% set card_type = 'Portal' %}
+			{% elseif 'rpg-crossed-swords' in detail.icon %}
+				{% set card_type = 'Swords' %}
+			{% elseif 'rpg-direction-sign' in detail.icon %}
+				{% set card_type = 'Direction' %}
+			{% elseif 'rpg-holy-grail' in detail.icon %}
+				{% set card_type = 'Grail' %}
+			{% endif %}
+			{'id' : '#{{ card_id }}', 'filters' : 'location={{ function.create_handle(key) }}, type={{ function.create_handle(card_type) }}, status={{ card_changed ? 'true' : 'false' }}', 'applied' : 0}{% if (!loop.last && key == 'Khy\'eras') || (key != 'Khy\'eras') %},{% endif %}
+		{% endspaceless %}{% endfor %}
+	{% endspaceless %}{% endfor %}];
+</script>
